syntax="proto3";

package nibiru.vpool.v1;

option go_package = "github.com/NibiruChain/nibiru/x/vpool/types";

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

enum Direction {
  ADD_TO_POOL = 0;
  REMOVE_FROM_POOL = 1;
}

// a snapshot of the vpool's reserves at a given point in time
message ReserveSnapshot {
  string base_asset_reserve = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", 
    (gogoproto.nullable) = false];

  // quote asset is usually the margin asset, e.g. NUSD
  string quote_asset_reserve = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", 
    (gogoproto.nullable) = false];

  // seconds since unix epoch
  int64 timestamp = 3;
  int64 block_number = 4;
}

// A virtual pool used only for price discovery of perpetual futures contracts.
// No real liquidity exists in this pool.
message Pool {
  // always BASE:QUOTE, e.g. BTC:NUSD or ETH:NUSD
  string pair = 1;

  // base asset is the crypto asset, e.g. BTC or ETH
  string base_asset_reserve = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", 
    (gogoproto.nullable) = false];

  // quote asset is usually stablecoin, in our case NUSD
  string quote_asset_reserve = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", 
    (gogoproto.nullable) = false];
    
  // ratio applied to reserves in order not to over trade
  string trade_limit_ratio = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false];

  // percentage that a single open or close position can alter the reserve amounts
  string fluctuation_limit_ratio = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", 
    (gogoproto.nullable) = false];
}